# ParseX

./: .env.example  .gitignore  CLAUDE.md  README.md  README_CN.md  main.py  package-lock.json  package.json  parserx.yaml  pyproject.toml
configs/: vlm_b.yaml  vlm_c.yaml
docs/: architecture.md  evaluation.md  evaluation_workflow.md  header_footer_image_policy.md  iteration_backlog.md  iteration_history.md  parsebench_baseline.md  quality_rubric.md  requirements.md  tool_eval.md
eval_reports/: iter30_baseline_2026-04-16.md  iter31_baseline_2026-04-17.md  iter32_baseline_2026-04-17.md
ground_truth/patent01/: expected.md
ground_truth_public/: README.md
ground_truth_public/basic_report/: expected.md  meta.json
ground_truth_public/header_footer_cleanup/: expected.md  meta.json
ground_truth_public/subsets/: warning_heavy.txt
parserx/: __init__.py  cli.py  pipeline.py  text_utils.py
parserx/assembly/: __init__.py  chapter.py  crossref.py  markdown.py
parserx/builders/: __init__.py  image_extract.py  metadata.py  ocr.py  reading_order.py
parserx/config/: __init__.py  schema.py
parserx/eval/: __init__.py  benchmark.py  compare.py  metrics.py  reporting.py  runner.py  warnings.py
parserx/models/: __init__.py  elements.py  results.py
parserx/processors/: __init__.py  (+11 more)
scripts/: llamaparse_to_markdown.ts  regression_test.py
tests/: test_chapter.py  test_chapter_assembler.py  test_cli.py  test_code_block.py  test_config.py  test_content_value.py  test_crossref.py  test_docx_provider.py  test_eval.py  test_formula.py  test_header_footer.py  test_image_processor.py  test_line_unwrap.py  test_live_e2e.py  test_llm_service.py  test_metadata_builder.py  test_ocr_builder.py  test_ocr_service.py  test_pdf_provider.py  test_pipeline.py  test_product_quality.py  test_reading_order.py  test_table_processor.py  test_text_clean.py  test_tool_eval.py  test_verification.py  test_vlm_review_processor.py
(+15 files in other folders)
