[project]
name = "parserx"
version = "0.1.0"
description = "High-fidelity document parsing tool for knowledge bases, retrieval, and analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf>=1.25.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "pillow>=10.0",
    "numpy>=1.26",
    "requests>=2.33.1",
    "docling>=2.0",
    "python-dotenv>=1.2.2",
    "python-docx>=1.2.0",
    "pdfplumber>=0.11.9",
    "pypdf>=6.9.2",
    "llama-parse>=0.6.94",
]

[project.optional-dependencies]
docx = ["docling>=2.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
bench = [
    "datasets>=3.0",
    "huggingface-hub>=0.25",
]

[project.scripts]
psx = "parserx.cli:main"
parserx = "parserx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fonttools>=4.62.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
markers = [
    "live_e2e: calls real OCR/LLM/VLM services configured via .env",
]
